--- a/Dice-Roller/app/src/main/res/layout/activity_main.xml
+++ b/Dice-Roller/app/src/main/res/layout/activity_main.xml
@@ -20,20 +20,30 @@
         app:layout_constraintVertical_bias="0.103" />
 
 
-
     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="216dp"
+        android:background="@color/black"
+        android:onClick="random"
         android:text="random"
+        android:textColor="@color/white"
+        android:textSize="15pt"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="80pt"
+        app:layout_constraintBottom_toTopOf="@+id/button1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.382"
-        android:textSize="15pt"
-        android:background="@color/black"
-        android:textColor="@color/white"
-        android:onClick="random"/>
+        app:layout_constraintVertical_bias="0.459"
+        tools:srcCompat="@tools:sample/avatars" />
 
 </android.support.constraint.ConstraintLayout>
