--- a/Prototype/prototypebasic1/app/src/main/res/layout/update.xml
+++ b/Prototype/prototypebasic1/app/src/main/res/layout/update.xml
@@ -44,7 +44,7 @@
             android:inputType="datetime" />
 
         <Button
-            android:id="@+id/addtachee"
+            android:id="@+id/updatetachee"
             android:layout_width="350dp"
             android:layout_height="48dp"
             android:background="#B7009688"
@@ -53,9 +53,9 @@
             android:textSize="20dp"
             android:textStyle="bold"
             />
-
-
     </LinearLayout>
+
+
 
 
 </LinearLayout>
